--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/
 
 
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -69,10 +70,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Segoe
+      fonts:
+        - asset: assets/fonts/SegoeUI.ttf
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato.ttf
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/RalewayLight.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
