--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^1.0.2
   flutter_slidable: ^0.5.7
   table_calendar: ^2.3.3
+  circular_check_box: ^1.0.4
+  date_picker_timeline: ^1.2.3
+  line_icons: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +83,9 @@ flutter:
     - family: Raleway
       fonts:
         - asset: assets/fonts/RalewayLight.ttf
+    - family: Varela
+      fonts:
+        - asset: assets/fonts/Varela.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
