--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   table_calendar: ^2.3.3
   circular_check_box: ^1.0.4
   date_picker_timeline: ^1.2.3
-  line_icons: ^2.0.1
+  flutter_datetime_picker: ^1.5.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +86,9 @@ flutter:
     - family: Varela
       fonts:
         - asset: assets/fonts/Varela.ttf
+    - family: Antonio
+      fonts:
+        - asset: assets/fonts/Antonio.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
