--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   circular_check_box: ^1.0.4
   date_picker_timeline: ^1.2.3
   flutter_datetime_picker: ^1.5.0
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
