--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   flutter_slidable: ^0.5.7
   table_calendar: ^2.3.3
   circular_check_box: ^1.0.4
-  date_picker_timeline: ^1.2.3
-  flutter_datetime_picker: ^1.5.0
   splashscreen: ^1.3.5
+  slide_popup_dialog: ^0.0.2
 
 dev_dependencies:
   flutter_test:
