--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   circular_check_box: ^1.0.4
   splashscreen: ^1.3.5
   slide_popup_dialog: ^0.0.2
+  simple_animations: ^3.0.3
 
 dev_dependencies:
   flutter_test:
